src/run/ci_provider/github_actions/snapshots/codspeed__run__ci_provider__github_actions__provider__tests__pull_request_provider_metadata-2.snap
---
source: src/run/ci_provider/github_actions/provider.rs
expression: run_part
---
{
  "runId": "6957110437",
  "runPartId": "log-env",
  "jobName": "log-env",
  "metadata": {}
}
